--- a/project-template.ipynb
+++ b/project-template.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "* created by nov05 on 2024-11-21\n",
+    "* Modified and completed by nov05 on 2024-11-21\n",
     "* [set up local env](https://gist.github.com/nov05/d9c3be6c2ab9f6c050e3d988830db08b)   \n",
     "\n",
     "```text  \n",
@@ -928,7 +928,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1116,7 +1116,6 @@
     }
    ],
    "source": [
-    "# predictor = TabularPredictor(label=\"count\").fit(train)\n",
     "predictor = TabularPredictor(label=\"count\").fit(train.drop(columns=['casual', 'registered']))"
    ]
   },
