--- a/project-template.ipynb
+++ b/project-template.ipynb
@@ -4856,14 +4856,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Same submitting predictions\n",
     "submission_2models = submission.copy()\n",
     "submission_2models[\"count\"] = predictions_2models\n",
-    "submission_2models.to_csv(\"submission_new_hpo.csv\", index=False)"
+    "submission_2models.to_csv(\"submission_2models.csv\", index=False)"
    ]
   },
   {
