--- a/project-template.ipynb
+++ b/project-template.ipynb
@@ -11,6 +11,8 @@
     "=================== System Info ===================\n",
     "AutoGluon Version:  1.0.0\n",
     "Python Version:     3.10.15\n",
+    "Operating System:   Windows\n",
+    "Platform Machine:   AMD64\n",
     "```"
    ]
   },
