--- a/project-template.ipynb
+++ b/project-template.ipynb
@@ -4845,15 +4845,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Remember to set all negative values to zero\n",
     "predictions_casual = predictor_casual.predict(test.drop(columns=[\"datetime\"]))\n",
     "predictions_registered = predictor_registered.predict(test.drop(columns=[\"datetime\"]))\n",
     "predictions_2models = predictions_casual + predictions_registered\n",
-    "predictions_2models[predictions_2models<0] = 0"
+    "predictions_2models[predictions_2models<0] = 0  ## Remember to set all negative values to zero"
    ]
   },
   {
