--- a/project-template.ipynb
+++ b/project-template.ipynb
@@ -1543,7 +1543,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "####  👉 Initial score of 1.86413, 0.53417 after \"time\" feather added "
+    "####  👉 Initial score of 1.86413; 0.53417 after \"time\" feather added  "
    ]
   },
   {
